--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -14,8 +14,9 @@ name: Update Checker
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt.git
-  REPO_BRANCH: master
+  REPO_BRANCH: v23.05.5
 #  REPO_BRANCH: v23.05.5
+#  REPO_BRANCH: master
 
 on:
   workflow_dispatch:
