--- a/.config
+++ b/.config
@@ -7,26 +7,15 @@ CONFIG_ARIA2_BITTORRENT=y
 CONFIG_ARIA2_COOKIE=y
 CONFIG_ARIA2_NOXML=y
 CONFIG_ARIA2_OPENSSL=y
+CONFIG_ARIA2_SFTP=y
 CONFIG_ARIA2_WEBSOCKET=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_DATE_COMPAT=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_DATE_NANO=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_DEFAULT_PASSWD_ALGO="md5"
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=384
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVEHISTORY=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVE_ON_EXIT=y
 CONFIG_BUSYBOX_CONFIG_LAST_SUPPORTED_WCHAR=0
-CONFIG_BUSYBOX_CONFIG_LOCALE_SUPPORT=y
-CONFIG_BUSYBOX_CONFIG_LSPCI=y
-CONFIG_BUSYBOX_CONFIG_LSUSB=y
-CONFIG_BUSYBOX_CONFIG_NPROC=y
 CONFIG_BUSYBOX_CONFIG_SUBST_WCHAR=0
-CONFIG_BUSYBOX_CONFIG_TIMEOUT=y
 CONFIG_BUSYBOX_CONFIG_UNICODE_SUPPORT=y
-CONFIG_BUSYBOX_CONFIG_UNICODE_WIDE_WCHARS=y
-CONFIG_DROPBEAR_ZLIB=y
-CONFIG_GETDNS_ENABLE_STUB_ONLY=y
 CONFIG_IMAGEOPT=y
-# CONFIG_KERNEL_WERROR is not set
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
@@ -36,8 +25,8 @@ CONFIG_LIBCURL_NGHTTP2=y
 CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_LIBCURL_PROXY=y
 CONFIG_LIBCURL_UNIX_SOCKETS=y
+CONFIG_LIBSSH2_OPENSSL=y
 CONFIG_LUCI_LANG_zh_Hans=y
-# CONFIG_MBEDTLS_ECP_DP_SECP521R1_ENABLED is not set
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_OPENSSL_OPTIMIZE_SPEED=y
 CONFIG_OPENSSL_WITH_ASM=y
@@ -52,27 +41,24 @@ CONFIG_OPENSSL_WITH_SEED=y
 CONFIG_OPENSSL_WITH_SRP=y
 CONFIG_OPENSSL_WITH_TLS13=y
 CONFIG_OPENSSL_WITH_WHIRLPOOL=y
-CONFIG_PACKAGE_MAC80211_DEBUGFS=y
-CONFIG_PACKAGE_MAC80211_MESH=y
+CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_6to4=y
+CONFIG_PACKAGE_acl=y
 CONFIG_PACKAGE_acme=y
 CONFIG_PACKAGE_acme-acmesh=y
 CONFIG_PACKAGE_acme-common=y
 CONFIG_PACKAGE_adblock=y
 CONFIG_PACKAGE_adblock-fast=y
 CONFIG_PACKAGE_alist=y
-CONFIG_PACKAGE_apache=y
-CONFIG_PACKAGE_apache-mod-webdav=y
 CONFIG_PACKAGE_aria2=y
 CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_arp-scan=y
-CONFIG_PACKAGE_arp-scan-database=y
+CONFIG_PACKAGE_arptables-legacy=y
 CONFIG_PACKAGE_attendedsysupgrade-common=y
+CONFIG_PACKAGE_banip=y
 CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_blkdiscard=y
-CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_blockd=y
-CONFIG_PACKAGE_blockdev=y
 # CONFIG_PACKAGE_bnx2-firmware is not set
 CONFIG_PACKAGE_bridge=y
 CONFIG_PACKAGE_btrfs-progs=y
@@ -81,9 +67,7 @@ CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_containerd=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-sort=y
-CONFIG_PACKAGE_cshark=y
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_davfs2=y
 CONFIG_PACKAGE_ddns-scripts=y
 CONFIG_PACKAGE_ddns-scripts-noip=y
 CONFIG_PACKAGE_ddns-scripts-services=y
@@ -101,15 +85,12 @@ CONFIG_PACKAGE_docker=y
 CONFIG_PACKAGE_docker-compose=y
 CONFIG_PACKAGE_dockerd=y
 CONFIG_PACKAGE_drill=y
-CONFIG_PACKAGE_eject=y
+CONFIG_PACKAGE_f2fs-tools=y
+CONFIG_PACKAGE_f2fsck=y
 CONFIG_PACKAGE_fail2ban=y
-CONFIG_PACKAGE_fdisk=y
-CONFIG_PACKAGE_findfs=y
 CONFIG_PACKAGE_fuse-utils=y
-CONFIG_PACKAGE_getdns=y
+CONFIG_PACKAGE_gawk=y
 CONFIG_PACKAGE_hd-idle=y
-CONFIG_PACKAGE_hdparm=y
-CONFIG_PACKAGE_hostapd-common=y
 CONFIG_PACKAGE_intel-microcode=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ip6tables-nft=y
@@ -120,49 +101,50 @@ CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_iptables-nft=y
 CONFIG_PACKAGE_iucode-tool=y
-CONFIG_PACKAGE_iw=y
-CONFIG_PACKAGE_iwinfo=y
-CONFIG_PACKAGE_kmod-8139cp=y
-CONFIG_PACKAGE_kmod-8139too=y
 # CONFIG_PACKAGE_kmod-amazon-ena is not set
 # CONFIG_PACKAGE_kmod-amd-xgbe is not set
 CONFIG_PACKAGE_kmod-arptables=y
+CONFIG_PACKAGE_kmod-asn1-decoder=y
+CONFIG_PACKAGE_kmod-asn1-encoder=y
 CONFIG_PACKAGE_kmod-ata-ahci=y
 CONFIG_PACKAGE_kmod-ata-core=y
 # CONFIG_PACKAGE_kmod-bnx2 is not set
 CONFIG_PACKAGE_kmod-br-netfilter=y
-CONFIG_PACKAGE_kmod-cfg80211=y
 CONFIG_PACKAGE_kmod-crypto-acompress=y
 CONFIG_PACKAGE_kmod-crypto-aead=y
-CONFIG_PACKAGE_kmod-crypto-ccm=y
-CONFIG_PACKAGE_kmod-crypto-cmac=y
-CONFIG_PACKAGE_kmod-crypto-ctr=y
-CONFIG_PACKAGE_kmod-crypto-gcm=y
-CONFIG_PACKAGE_kmod-crypto-gf128=y
-CONFIG_PACKAGE_kmod-crypto-ghash=y
+CONFIG_PACKAGE_kmod-crypto-blake2b=y
+CONFIG_PACKAGE_kmod-crypto-cbc=y
+CONFIG_PACKAGE_kmod-crypto-crc32=y
 CONFIG_PACKAGE_kmod-crypto-hmac=y
 CONFIG_PACKAGE_kmod-crypto-manager=y
 CONFIG_PACKAGE_kmod-crypto-null=y
 CONFIG_PACKAGE_kmod-crypto-rng=y
-CONFIG_PACKAGE_kmod-crypto-seqiv=y
+CONFIG_PACKAGE_kmod-crypto-sha1=y
+CONFIG_PACKAGE_kmod-crypto-sha256=y
+CONFIG_PACKAGE_kmod-crypto-sha3=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
-# CONFIG_PACKAGE_kmod-dwmac-intel is not set
-# CONFIG_PACKAGE_kmod-e1000e is not set
+CONFIG_PACKAGE_kmod-crypto-xxhash=y
+CONFIG_PACKAGE_kmod-dax=y
+CONFIG_PACKAGE_kmod-dm=y
 # CONFIG_PACKAGE_kmod-forcedeth is not set
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-btrfs=y
+CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-f2fs=y
 CONFIG_PACKAGE_kmod-fs-ntfs3=y
-CONFIG_PACKAGE_kmod-fs-squashfs=y
 CONFIG_PACKAGE_kmod-fuse=y
 CONFIG_PACKAGE_kmod-hid=y
 CONFIG_PACKAGE_kmod-hid-generic=y
-CONFIG_PACKAGE_kmod-hwmon-coretemp=y
+# CONFIG_PACKAGE_kmod-hwmon-core is not set
+# CONFIG_PACKAGE_kmod-i2c-algo-bit is not set
+# CONFIG_PACKAGE_kmod-i2c-core is not set
 # CONFIG_PACKAGE_kmod-igb is not set
 # CONFIG_PACKAGE_kmod-igc is not set
 CONFIG_PACKAGE_kmod-input-evdev=y
 CONFIG_PACKAGE_kmod-ip6-tunnel=y
 CONFIG_PACKAGE_kmod-ip6tables=y
+CONFIG_PACKAGE_kmod-ip6tables-extra=y
 CONFIG_PACKAGE_kmod-ipt-conntrack=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-core=y
@@ -172,22 +154,24 @@ CONFIG_PACKAGE_kmod-ipt-ipset=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-nat-extra=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
+CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-ipt-physdev=y
-CONFIG_PACKAGE_kmod-ipt-raw=y
 CONFIG_PACKAGE_kmod-iptunnel=y
+CONFIG_PACKAGE_kmod-iptunnel4=y
 CONFIG_PACKAGE_kmod-iptunnel6=y
 # CONFIG_PACKAGE_kmod-ixgbe is not set
+CONFIG_PACKAGE_kmod-keys-encrypted=y
+CONFIG_PACKAGE_kmod-keys-trusted=y
 CONFIG_PACKAGE_kmod-lib-crc16=y
 CONFIG_PACKAGE_kmod-lib-lzo=y
-CONFIG_PACKAGE_kmod-lib-objagg=y
-CONFIG_PACKAGE_kmod-lib-parman=y
 CONFIG_PACKAGE_kmod-lib-raid6=y
 CONFIG_PACKAGE_kmod-lib-xor=y
+CONFIG_PACKAGE_kmod-lib-xxhash=y
 CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
 CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
 CONFIG_PACKAGE_kmod-lib-zstd=y
-CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_kmod-macvlan=y
+CONFIG_PACKAGE_kmod-nat46=y
 CONFIG_PACKAGE_kmod-net-selftests=y
 CONFIG_PACKAGE_kmod-nf-conncount=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
@@ -196,18 +180,15 @@ CONFIG_PACKAGE_kmod-nf-ipt6=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nft-compat=y
-# CONFIG_PACKAGE_kmod-pcs-xpcs is not set
+CONFIG_PACKAGE_kmod-oid-registry=y
 CONFIG_PACKAGE_kmod-phy-ax88796b=y
-CONFIG_PACKAGE_kmod-phy-smsc=y
-CONFIG_PACKAGE_kmod-sched-act-sample=y
+CONFIG_PACKAGE_kmod-random-core=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-scsi-core=y
-# CONFIG_PACKAGE_kmod-stmmac-core is not set
+CONFIG_PACKAGE_kmod-sit=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
-# CONFIG_PACKAGE_kmod-tg3 is not set
+CONFIG_PACKAGE_kmod-tpm=y
 CONFIG_PACKAGE_kmod-tun=y
-CONFIG_PACKAGE_kmod-udptunnel4=y
-CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-hid=y
@@ -215,20 +196,11 @@ CONFIG_PACKAGE_kmod-usb-net=y
 CONFIG_PACKAGE_kmod-usb-net-asix=y
 CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
 CONFIG_PACKAGE_kmod-usb-net-smsc75xx=y
-CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
-CONFIG_PACKAGE_kmod-usb-storage-uas=y
-CONFIG_PACKAGE_kmod-usb-uhci=y
-CONFIG_PACKAGE_kmod-usb-wdm=y
-CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
 CONFIG_PACKAGE_kmod-usb2=y
-CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_kmod-veth=y
-CONFIG_PACKAGE_kmod-vxlan=y
-# CONFIG_PACKAGE_knot-resolver_dnstap is not set
-CONFIG_PACKAGE_libapr=y
-CONFIG_PACKAGE_libaprutil=y
+CONFIG_PACKAGE_libacl=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libbpf=y
@@ -236,10 +208,8 @@ CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcares=y
 CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_libdevmapper=y
 CONFIG_PACKAGE_libelf=y
-CONFIG_PACKAGE_libev=y
-CONFIG_PACKAGE_libexpat=y
-CONFIG_PACKAGE_libfdisk=y
 CONFIG_PACKAGE_libffi=y
 CONFIG_PACKAGE_libfuse=y
 CONFIG_PACKAGE_libgdbm=y
@@ -262,29 +232,27 @@ CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libncurses=y
-CONFIG_PACKAGE_libneon=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnettle=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libopenssl-conf=y
+CONFIG_PACKAGE_libparted=y
 CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpcre2=y
-CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libpython3=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libseccomp=y
 CONFIG_PACKAGE_libsqlite3=y
+CONFIG_PACKAGE_libssh2=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
-CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libxtables=y
-CONFIG_PACKAGE_libyaml=y
+CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_lsblk=y
-CONFIG_PACKAGE_lscpu=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-acme=y
@@ -293,15 +261,15 @@ CONFIG_PACKAGE_luci-app-adblock-fast=y
 CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
+CONFIG_PACKAGE_luci-app-banip=y
 CONFIG_PACKAGE_luci-app-commands=y
-CONFIG_PACKAGE_luci-app-cshark=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-natmap=y
-CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-app-pbr=y
+CONFIG_PACKAGE_luci-app-package-manager=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-base=y
@@ -312,16 +280,16 @@ CONFIG_PACKAGE_luci-i18n-adblock-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-attendedsysupgrade-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-banip-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-commands-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-cshark-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-natmap-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-pbr-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
 CONFIG_PACKAGE_luci-lib-base=y
@@ -339,12 +307,11 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-theme-openwrt-2020=y
 CONFIG_PACKAGE_mailsend=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_natmap=y
 CONFIG_PACKAGE_openssl-util=y
-CONFIG_PACKAGE_pbr=y
+CONFIG_PACKAGE_parted=y
 CONFIG_PACKAGE_px5g-mbedtls=y
 CONFIG_PACKAGE_python3=y
 CONFIG_PACKAGE_python3-asyncio=y
@@ -372,6 +339,7 @@ CONFIG_PACKAGE_python3-unittest=y
 CONFIG_PACKAGE_python3-urllib=y
 CONFIG_PACKAGE_python3-uuid=y
 CONFIG_PACKAGE_python3-xml=y
+CONFIG_PACKAGE_resize2fs=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
@@ -380,11 +348,9 @@ CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rpcsys=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_rpcd-mod-ucode=y
-CONFIG_PACKAGE_rsync=y
-CONFIG_PACKAGE_rsyncd=y
 CONFIG_PACKAGE_runc=y
 CONFIG_PACKAGE_socat=y
-CONFIG_PACKAGE_stubby=y
+CONFIG_PACKAGE_tc-full=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tini=y
@@ -392,7 +358,6 @@ CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-lua=y
 CONFIG_PACKAGE_ucode-mod-math=y
-CONFIG_PACKAGE_ucode-mod-nl80211=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_vim=y
@@ -400,15 +365,13 @@ CONFIG_PACKAGE_vsftpd-tls=y
 CONFIG_PACKAGE_watchcat=y
 CONFIG_PACKAGE_webui-aria2=y
 CONFIG_PACKAGE_wget-ssl=y
-CONFIG_PACKAGE_wifi-scripts=y
-CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_xtables-nft=y
 CONFIG_PACKAGE_zerotier=y
-CONFIG_PACKAGE_zlib=y
-CONFIG_PACKAGE_znc=y
-CONFIG_PACKAGE_znc-mod-fail2ban=y
 CONFIG_PACKAGE_ztdns=y
+CONFIG_PARTED_LVM2=y
+CONFIG_PARTED_READLINE=y
 CONFIG_PCRE2_JIT_ENABLED=y
+# CONFIG_PER_FEED_REPO is not set
 CONFIG_PREINITOPT=y
 CONFIG_SQLITE3_COLUMN_METADATA=y
 CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
@@ -417,14 +380,7 @@ CONFIG_SQLITE3_FTS4=y
 CONFIG_SQLITE3_FTS5=y
 CONFIG_SQLITE3_RTREE=y
 CONFIG_TARGET_DEFAULT_LAN_IP_FROM_PREINIT=y
-# CONFIG_TARGET_EXT4_JOURNAL is not set
 CONFIG_TARGET_KERNEL_PARTSIZE=32
-CONFIG_TARGET_PREINIT_BROADCAST="192.168.10.255"
-CONFIG_TARGET_PREINIT_IP="192.168.10.1"
-CONFIG_TARGET_ROOTFS_PARTSIZE=1536
-CONFIG_WPA_MSG_MIN_PRIORITY=3
-CONFIG_PACKAGE_kmod-i2c-algo-bit=y
-CONFIG_PACKAGE_kmod-i2c-core=y
-CONFIG_PACKAGE_kmod-pps=y
-CONFIG_PACKAGE_kmod-ptp=y
-# CONFIG_WPA_MBO_SUPPORT is not set
+CONFIG_TARGET_PREINIT_BROADCAST="192.168.19.255"
+CONFIG_TARGET_PREINIT_IP="192.168.19.1"
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
