--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -27,7 +27,7 @@ env:
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  REPO_BRANCH: v24.10.2
+  REPO_BRANCH: openwrt-24.10
 
 jobs:
   build:
