--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -14,7 +14,7 @@ name: Update Checker
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt.git
-  REPO_BRANCH: v24.10.2
+  REPO_BRANCH: openwrt-24.10
 #  REPO_BRANCH: v23.05.5
 #  REPO_BRANCH: master
 
