--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -92,6 +92,7 @@ jobs:
     - name: Disable Rust CI LLVM download
       run: |
         sudo -E sed -i 's/--set=llvm.download-ci-llvm=true/--set=llvm.download-ci-llvm=false/g' feeds/packages/lang/rust/Makefile
+        ls feeds/packages/lang/rust/
 
     - name: Download package
       id: package
