--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -75,8 +75,7 @@ jobs:
     - name: Fix Rust CI build issue
       run: |
         if [ -f "feeds/packages/lang/rust/patches/010-rustc-llvm.patch" ]; then
-          sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm = "if-unchanged"/g' feeds/packages/lang/rust/patches/010-rustc-llvm.patch
-          sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm = "if-unchanged"/g' feeds/packages/lang/rust/patches/*.patch
+          sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' feeds/packages/lang/rust/Makefile
         else
           echo "Rust patches not found, skipping modification"
         fi
