--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -74,7 +74,7 @@ jobs:
 
     - name: Fix Rust CI build issue
       run: |
-        if [ -f "feeds/packages/lang/rust/patches/010-rustc-llvm.patch" ]; then
+        if [ -f "openwrt/feeds/packages/lang/rust/Makefile" ]; then
           sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' feeds/packages/lang/rust/Makefile
         else
           echo "Rust patches not found, skipping modification"
@@ -90,7 +90,8 @@ jobs:
 
     - name: List rust
       run: |
-        ls -r feeds/packages/lang/rust/
+        cd openwrt && ls -r openwrt/feeds/packages/lang/rust/
+        cd openwrt && ls -r
 
     - name: Download package
       id: package
