--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -76,7 +76,13 @@ jobs:
 
     - name: Fix Rust CI build issue
       run: |
+        cd openwrt && ls -ltr
         if [ -f "openwrt/feeds/packages/lang/rust/Makefile" ]; then
+          sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' feeds/packages/lang/rust/Makefile
+        else
+          echo "Rust patches not found, skipping modification"
+        fi
+        if [ -f "feeds/packages/lang/rust/Makefile" ]; then
           sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' feeds/packages/lang/rust/Makefile
         else
           echo "Rust patches not found, skipping modification"
