--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -76,13 +76,13 @@ jobs:
 
     - name: List rust
       run: |
-        cd openwrt/feeds/packages/lang/ && ls -ltr 
+        cd openwrt/feeds/packages/lang/rust/ && ls -ltr 
         
 
     - name: Fix Rust CI build issue
       run: |
-        if [ -f "rust/Makefile" ]; then
-          sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' feeds/packages/lang/rust/Makefile
+        if [ -f "openwrt/feeds/packages/lang/rust/Makefile" ]; then
+          sudo -E sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' feeds/packages/lang/rust/Makefile
         else
           echo "Rust patches not found, skipping modification"
         fi
@@ -93,7 +93,6 @@ jobs:
           echo "Rust patches not found, skipping modification"
         fi
         
-        cd openwrt/feeds/packages/lang/ && ls -ltr
 
     - name: Load custom configuration
       run: |
