--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -77,18 +77,21 @@ jobs:
     - name: List rust
       run: |
         cd openwrt/feeds/packages/lang/rust/ && ls -ltr 
+        cd openwrt/feeds/packages/lang/rust/ && cat Makefile
+        cd openwrt/feeds/packages/lang/rust/ && cat Config.in
+        
         
 
     - name: Fix Rust CI build issue
       run: |
         if [ -f "openwrt/feeds/packages/lang/rust/Makefile" ]; then
-          sudo -E sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' feeds/packages/lang/rust/Makefile
+          sudo -E sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' openwrt/feeds/packages/lang/rust/Makefile
         else
           echo "Rust patches not found, skipping modification"
         fi
         
         if [ -f "/workdir/openwrt/feeds/packages/lang/rust/Makefile" ]; then
-          sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' feeds/packages/lang/rust/Makefile
+          sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' /workdir/openwrt/feeds/packages/lang/rust/Makefile
         else
           echo "Rust patches not found, skipping modification"
         fi
