--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -77,7 +77,7 @@ jobs:
     - name: Fix Rust CI build issue
       run: |
         if [ -f "/workdir/openwrt/feeds/packages/lang/rust/Makefile" ]; then
-          sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm =false/g' /workdir/openwrt/feeds/packages/lang/rust/Makefile
+          sed -i 's/llvm.download-ci-llvm = true/llvm.download-ci-llvm = if-unchanged/g' /workdir/openwrt/feeds/packages/lang/rust/Makefile
         else
           echo "Rust patches not found, skipping modification"
         fi
