--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -59,6 +59,7 @@ jobs:
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
         ls -r
         pwd
+        cd openwrt
         git branch -a
         git checkout openwrt-24.10
 
